# fastmcp-injector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
fastmcp_injector/: __init__.py  _core.py
tests/: test_fastmcp_injector.py
